force-app/main/default/objects/Leaderboard__c/Leaderboard__c.object-meta.xml
<CustomObject>
    <label>Leaderboard</label>
    <nameField>
        <label>Leaderboard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Leaderboards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>