force-app/main/default/objects/Leaderboard__c/fields/AvePoint2Badge__c.field-meta.xml
<CustomField>
    <fullName>AvePoint2Badge__c</fullName>
    <formula>IF(Badges__c &gt; 0 &amp;&amp;  CONTAINS(Trailhead_Rank__c, &apos;Ranger&apos; ) , TotalPoints__c /  (Badges__c - CommBadges__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AvePoint2Badge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>