force-app/main/default/objects/Leaderboard__c/fields/Badges__c.field-meta.xml
<CustomField>
    <fullName>Badges__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Badges</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>