force-app/main/default/objects/Leaderboard__c/fields/Badges_NoComm__c.field-meta.xml
<CustomField>
    <fullName>Badges_NoComm__c</fullName>
    <formula>Badges__c -  CommBadges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Badges_NoComm</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>