force-app/main/default/objects/Leaderboard__c/fields/BadgesT__c.field-meta.xml
<CustomField>
    <fullName>BadgesT__c</fullName>
    <label>BadgesT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>