force-app/main/default/objects/Leaderboard__c/fields/Bio_Data__c.field-meta.xml
<CustomField>
    <fullName>Bio_Data__c</fullName>
    <label>Bio_Data</label>
    <type>TextArea</type>
</CustomField>