force-app/main/default/objects/Leaderboard__c/fields/CDate__c.field-meta.xml
<CustomField>
    <fullName>CDate__c</fullName>
    <formula>now() - 0.2083</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CDate</label>
    <type>DateTime</type>
</CustomField>