force-app/main/default/objects/Leaderboard__c/fields/Certs__c.field-meta.xml
<CustomField>
    <fullName>Certs__c</fullName>
    <label>Certs</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>