force-app/main/default/objects/Leaderboard__c/fields/CommBadges__c.field-meta.xml
<CustomField>
    <fullName>CommBadges__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CommBadges</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>