force-app/main/default/objects/Leaderboard__c/fields/CommBadgesT__c.field-meta.xml
<CustomField>
    <fullName>CommBadgesT__c</fullName>
    <label>CommBadgesT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>