force-app/main/default/objects/Leaderboard__c/fields/First_Ascent__c.field-meta.xml
<CustomField>
    <fullName>First_Ascent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>First Ascent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>