force-app/main/default/objects/Leaderboard__c/fields/First_AscentT__c.field-meta.xml
<CustomField>
    <fullName>First_AscentT__c</fullName>
    <label>First AscentT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>