force-app/main/default/objects/Leaderboard__c/fields/LOTR_Rank__c.field-meta.xml
<CustomField>
    <fullName>LOTR_Rank__c</fullName>
    <formula>IF(BadgesT__c &gt;=1000, &quot;(Thorongil)&quot;,
IF(BadgesT__c &gt;=900, &quot;(Wingfoot)&quot;,
IF(BadgesT__c &gt;=800, &quot;(Sindarin)&quot;,
IF(BadgesT__c &gt;=700, &quot;(Telcontar)&quot;,
IF(BadgesT__c &gt;=600, &quot;(Aragorn)&quot;,
IF(BadgesT__c &gt;=500, &quot;(Dúnadan)&quot;,
IF(BadgesT__c &gt;=400, &quot;(Elessar)&quot;,
IF(BadgesT__c &gt;=300, &quot;(Elfstone)&quot;,
IF(BadgesT__c &gt;=200, &quot;(Estel)&quot;,
IF(BadgesT__c &gt;=100, &quot;(Strider)&quot;,
NULL))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LOTR Rank</label>
    <type>Text</type>
</CustomField>