force-app/main/default/objects/Leaderboard__c/fields/NameT__c.field-meta.xml
<CustomField>
    <fullName>NameT__c</fullName>
    <label>NameT</label>
    <length>80</length>
    <type>Text</type>
</CustomField>