force-app/main/default/objects/Leaderboard__c/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <label>Profile</label>
    <type>Url</type>
</CustomField>