force-app/main/default/objects/Leaderboard__c/fields/ProfileUrlLength__c.field-meta.xml
<CustomField>
    <fullName>ProfileUrlLength__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ProfileUrlLength</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>