force-app/main/default/objects/Leaderboard__c/fields/Rank__c.field-meta.xml
<CustomField>
    <fullName>Rank__c</fullName>
    <formula>(Badges__c * 100) +  (SuperBadges__c * 2500) +  (First_Ascent__c * 5000) +   TotalPoints__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>