force-app/main/default/objects/Leaderboard__c/fields/sBadges__c.field-meta.xml
<CustomField>
    <fullName>sBadges__c</fullName>
    <description>Text Value of badges</description>
    <formula>TEXT(Badges__c)</formula>
    <label>sBadges</label>
    <type>Text</type>
</CustomField>