force-app/main/default/objects/Leaderboard__c/fields/sTotalPoints__c.field-meta.xml
<CustomField>
    <fullName>sTotalPoints__c</fullName>
    <formula>TEXT( TotalPoints__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>sTotalPoints</label>
    <type>Text</type>
</CustomField>