force-app/main/default/objects/Leaderboard__c/fields/SuperBadges__c.field-meta.xml
<CustomField>
    <fullName>SuperBadges__c</fullName>
    <defaultValue>0</defaultValue>
    <label>SuperBadges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>