force-app/main/default/objects/Leaderboard__c/fields/SuperBadgesT__c.field-meta.xml
<CustomField>
    <fullName>SuperBadgesT__c</fullName>
    <label>SuperBadgesT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>