force-app/main/default/objects/Leaderboard__c/fields/TotalPointsT__c.field-meta.xml
<CustomField>
    <fullName>TotalPointsT__c</fullName>
    <label>TotalPointsT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>