force-app/main/default/objects/Leaderboard__c/fields/Touch__c.field-meta.xml
<CustomField>
    <fullName>Touch__c</fullName>
    <label>Touch</label>
    <length>10</length>
    <type>Text</type>
</CustomField>