force-app/main/default/objects/Leaderboard__c/fields/TrailblazerSince__c.field-meta.xml
<CustomField>
    <fullName>TrailblazerSince__c</fullName>
    <label>TrailblazerSince</label>
    <length>50</length>
    <type>Text</type>
</CustomField>