force-app/main/default/objects/Leaderboard__c/fields/UrlStatus__c.field-meta.xml
<CustomField>
    <fullName>UrlStatus__c</fullName>
    <label>UrlStatus</label>
    <length>20</length>
    <type>Text</type>
</CustomField>