force-app/main/default/objects/Leaderboard__c/fields/Userid__c.field-meta.xml
<CustomField>
    <fullName>Userid__c</fullName>
    <label>Userid</label>
    <length>127</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>