force-app/main/default/objects/Leaderboard__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Profile__c</columns>
    <columns>Badges__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Trails__c</columns>
    <columns>UrlStatus__c</columns>
    <columns>NameT__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>